# docker-django-celery

./: .gitignore  Django Celery Beat App with PostgreSQL Standalone with DR  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ddc/: manage.py  start_app.sh
ddc/app/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
ddc/app/migrations/: 0001_initial.py
ddc/ddc/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
